[package]
name = "commit"
version = "0.1.0"
edition = "2018"
authors = ["Joe Doyle <joe@translucence.net>, Jeb Bearer <jeb.bearer@translucence.net>"]

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-serialize = { version = "0.3.0", features = ["derive"] }
bitvec = "=0.20.1"
funty = "=1.1.0"
generic-array = { version = "0.14.4", features = ["serde"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "^0.10"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
