[package]
name = "commit"
version = "0.2.2"
edition = "2018"
authors = ["Espresso Systems <hello@espressosys.com>"]
license = "MIT"

[features]
default = ["ark-serialize", "serde"]
ark-serialize = [
    "dep:ark-serialize",
    "tagged-base64",
    "tagged-base64/ark-serialize",
]
serde = ["dep:serde", "tagged-base64", "tagged-base64/serde", "ark-serialize"]

[dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
ark-serialize = { version = "0.4.0", optional = true, features = ["derive"] }
bitvec = "1.0"
derivative = "2.2"
derive_more = "0.99"
funty = "2.0"
hex = "0.4.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
sha3 = "^0.10"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.3.4", optional = true, default-features = false }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
